Decision tree implemented

--- a/Algo1_knn.ipynb
+++ b/Algo1_knn.ipynb
@@ -7,10 +7,7 @@
    "source": [
     "Algorithm used:\n",
     "KNN classifier. [Baseline algorithm and does not give much accuracy]\n",
-    "Default k value=5\n",
-    "k value after cross validation=1\n",
-    "\n",
-    "Conclusion: Model performs better for k=5"
+    "k value after cross validation=1"
    ]
   },
   {
@@ -281,21 +278,7 @@
    "id": "cfdf0ca1",
    "metadata": {},
    "source": [
-    "Inference 1: k=5\n",
-    "\n",
-    "Class 0 (non-Parkinson’s cases):\n",
-    "Precision = 0.88 ---> 88% of those predicted as 0 were actually 0.\n",
-    "Recall = 0.82 ---> 82% of actual 0 cases were correctly predicted.\n",
-    "F1 = 0.85 ---> Good balance of precision and recall.\n",
-    "\n",
-    "Class 1 (Parkinson’s cases):\n",
-    "Precision = 0.86 ---> 86% of those predicted as 1 were correct.\n",
-    "Recall = 0.90 ---> 90% of actual 1 cases were correctly detected.\n",
-    "F1 = 0.88 ---> Very good!\n",
-    "\n",
-    "Accuracy of knn when k=5 is 87%\n",
-    "\n",
-    "Inference 2: k=1(obtained after cross validation)\n",
+    "Inference: k=1(obtained after cross validation)\n",
     "\n",
     "Class 0 (non-Parkinson’s cases):\n",
     "Precision = 0.81 ---> 81% of those predicted as 0 were actually 0.\n",
@@ -307,7 +290,7 @@
     "Recall = 0.90 ---> 90% of actual 1 cases were correctly detected.\n",
     "F1 = 0.89 ---> Very good!\n",
     "\n",
-    "Accuracy of the knn where k=1 is 85%"
+    "Accuracy of the knn where k=1 is 86%"
    ]
   }
  ],
