--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c27d0f10",
+   "metadata": {},
+   "source": [
+    "Determine the target attributes in the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "96fd552c",
